# spider

./: .gitignore  CMakeLists.txt  Cargo.toml  aws-bench.md  aws-config.toml  config.toml  lint-tasks.yaml  taskfile.yaml
.github/workflows/: tests.yaml
benchmarks/executor_overhead/: CMakeLists.txt
benchmarks/executor_overhead/python/: benchmark_client.py  sleep_tasks.py
benchmarks/executor_overhead/scripts/: process_manager.py  visualize_timeline.py
benchmarks/executor_overhead/src/: benchmark_client.cpp  sleep_tasks.cpp  sleep_tasks.hpp
cmake/Modules/: Findhiredis.cmake  Findredis++.cmake
components/spider-scheduler/: Cargo.toml
components/spider-scheduler/src/: core.rs  dispatch_queue.rs  error.rs  lib.rs  storage_client.rs  types.rs
components/spider-scheduler/src/core_impl/: round_robin.rs
components/spider-storage/: Cargo.toml
components/spider-storage-api-bench/: Cargo.toml  build.rs
components/spider-storage-api-bench/config/: default.toml
components/spider-storage-api-bench/proto/: storage_api.proto
components/spider-storage-api-bench/src/: agent.rs  api.rs  client.rs  config.rs  controller.rs  distributed.rs  grpc.rs  lib.rs  main.rs  metrics.rs  rest.rs  server.rs  workload.rs
components/spider-storage/src/: config.rs  db.rs  lib.rs
components/spider-storage/tests/: mariadb_infra.rs  mariadb_test.rs  scheduling_infra.rs
data/: grpc_deep.json  grpc_flat.json  grpc_mixed.json  rest_deep.json  rest_flat.json  rest_mixed.json
data/baker-1/: grpc_flat.json  rest_flat.json
data/baker-2/: benchmark_report.md  grpc_mixed.json  rest_flat.json  rest_mixed.json
data/lzh/: benchmark_report.md  grpc_deep.json  grpc_flat.json  grpc_mixed.json  rest_deep.json  rest_flat.json  rest_mixed.json
docs/src/dev-docs/: testing.md
python/: pyproject.toml
python/spider-py/: pyproject.toml
python/spider-py/tests/: __init__.py
python/src/client/: driver.py  task.py  taskgraph.py
python/src/core/: driver.py  taskgraph.py
src/spider/: .clang-format  CMakeLists.txt
src/spider/client/: Job.hpp  Receiver.hpp  Sender.hpp  TaskContext.hpp  spider.hpp  task.hpp
src/spider/core/: ReceiverAccess.hpp  SenderAccess.hpp  Task.cpp  Task.hpp
src/spider/scheduler/: FifoPolicy.cpp  SchedulerServer.cpp
src/spider/storage/: MetadataStorage.hpp
src/spider/worker/: FunctionManager.cpp  FunctionManager.hpp  TaskExecutor.cpp  TaskExecutor.hpp  WorkerClient.cpp  task_executor.cpp  worker.cpp
src/stdl/: CMakeLists.txt
src/stdl/src/ast/: ASTNode.cpp  ASTNode.hpp  ASTVisitor.hpp  RootNode.cpp  RootNode.hpp  StructNode.cpp  StructNode.hpp
taskfiles/: test.yaml
tests/integration/: client.py  test_channel.py  test_client.py
tests/scheduler/: test-SchedulerPolicy.cpp
tests/storage/: test-MetadataStorage.cpp
tests/utils/: CoreTaskUtils.cpp
tests/worker/: worker-test.cpp  worker-test.hpp
tools/scripts/lib_install/: hiredis.sh  mariadb-connector-cpp.sh  redis-plus-plus.sh
tools/scripts/storage-api-bench/: aws_common.py  aws_discover.py  aws_make_config.py  aws_run_matrix.py  aws_run_protocol.py  generate_aws_scalability_report.py  generate_report.py  generate_scalability_report.py  requirements.txt  reset_database.py  run_agent.py  run_all.py  run_client.py  run_compare.py  run_distributed.py  run_distributed_protocol.py  run_server.py
(+104 files in other folders)
