[package]
name = "spider-storage-api-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = "0.7.9"
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
prost = "0.13.5"
reqwest = { version = "0.12.24", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spider-core = { path = "../spider-core" }
spider-storage = { path = "../spider-storage" }
spider-tdl = { path = "../spider-tdl" }
tabled = "0.20.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.8"
tonic = "0.12.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.12.3"
